--- a/ber_family/views/product_family.xml
+++ b/ber_family/views/product_family.xml
@@ -10,8 +10,8 @@
                 <group>
                     <field name="name"/>
                     <field name="description"/>
-                    <field name="product_ids"/>
-                    <field name="account_move_ids"/>
+                    <field name="product_ids" widget="many2many"/>
+                    <field name="account_move_ids" widget="many2many"/>
                 </group>
             </form>
 
@@ -37,6 +37,6 @@
         <field name="view_mode">tree,form</field>
     </record>
 
-    <menuitem id="product_family_menu" name="Product families" parent="stock.menu_product_in_config_stock" action="product_family_action" sequence="3"/>
+    <menuitem id="product_family_menu" name="Familles d'article" parent="stock.menu_product_in_config_stock" action="product_family_action" sequence="3"/>
 
 </odoo>
