--- a/invoice_intercompany/wizard/stock_intercompany.xml
+++ b/invoice_intercompany/wizard/stock_intercompany.xml
@@ -18,7 +18,20 @@
                 </group>
                 <group>
                     <field name="origin"/>
-                    <field name="line_ids"/>
+                    <field name="line_ids">
+                        <form>
+                            <group>
+                                <field name="product_id" options="{'no_create': True}"/>
+                                <field name="quantity"/>
+                                <field name="lot_id" options="{'no_create': True}"/>
+                            </group>
+                        </form>
+                        <tree>
+                            <field name="product_id"/>
+                            <field name="quantity"/>
+                            <field name="lot_id"/>
+                        </tree>
+                    </field>
                 </group>
                 <footer>
                     <button string="Effectuer le transfert" class="btn btn-primary" type="object" name="run"/>
