--- a/invoice_intercompany/wizard/stock_intercompany_line.xml
+++ b/invoice_intercompany/wizard/stock_intercompany_line.xml
@@ -7,11 +7,25 @@
 
             <form>
                 <group>
-                    <field name="product_id"/>
+                    <field name="product_id" options="{'no_create': True}"/>
                     <field name="quantity"/>
-                    <field name="lot_id"/>
+                    <field name="lot_id" options="{'no_create': True}"/>
                 </group>
             </form>
+
+        </field>
+    </record>
+
+    <record id="wizard_stock_intercompany_line_tree" model="ir.ui.view">
+        <field name="name">Ligne de transfert IS</field>
+        <field name="model">stock.intercompany.line</field>
+        <field name="arch" type="xml">
+
+            <tree>
+                <field name="product_id"/>
+                <field name="quantity"/>
+                <field name="lot_id"/>
+            </tree>
 
         </field>
     </record>
